[gd_scene load_steps=2 format=3 uid="uid://t4gv7qydnx47"]

[ext_resource type="Script" uid="uid://c5268u1outcpu" path="res://Scripts/menu.gd" id="1_3kf3n"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_3kf3n")

[node name="Background" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
z_index = -6
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.17365006, 0.46320158, 0.7590657, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="Title" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Example Leaderboard Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitle" type="Label" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "made for SimpleBoards"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="LeaderboardButton" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Leaderboard"

[node name="SimpleBoardsButton" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Setup SimpleBoards"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/SimpleBoardsButton" to="." method="_on_simple_boards_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
